<resources>
    <string name="app_name">Exercicio2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="dango">Dango</string>
    <string name="welcome_to_dango">Welcome to Dango</string>
    <string name="create_account">Create Account</string>
    <string name="sonya_gmail_com">sonya@gmail.com</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="queroamigos">queroamigos</string>
    <string name="pass">**********</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="delete_account">Delete Account</string>
</resources>