<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#B52727"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/dango"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center"
            android:textSize="20dp"
            android:textColor="#B5FFFFFF"
            />

        <TextView
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:text="@string/create_account"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp"
            android:textSize="20dp"
            android:textColor="#ffff"
            />
        <TextView
            android:layout_width="180dp"
            android:layout_height="22dp"
            android:text="@string/email"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginRight="25dp"
            android:textSize="15dp"
            android:textColor="#ffff"
            />
        <EditText
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/textedit"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:hint="@string/sonya_gmail_com"
            />

        <TextView
            android:layout_width="180dp"
            android:layout_height="22dp"
            android:text="@string/password"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginRight="25dp"
            android:textSize="15dp"
            android:textColor="#ffff"
            />
        <EditText
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/textedit"
            android:inputType="textPassword"
            android:padding="8dp"
            android:hint="@string/pass"
            />
        <Button
            android:background="@drawable/stylebotao"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:text="@string/register"
            android:textAllCaps="false"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:textColor="#fff"
            />
        <Button
            android:background="@drawable/stylebotao"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:textColor="#fff"
            />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:text="@string/delete_account"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:textColor="#fff"
            />

    </LinearLayout>
</LinearLayout>