<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#B52727"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/dango"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center"
            android:textSize="20dp"
            android:textColor="#B5FFFFFF"
            />

        <TextView
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:text="@string/welcome_to_dango"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:textSize="20dp"
            android:textColor="#ffff"
            />
        <ImageView
            android:background="@drawable/styleimg"
            android:padding="10dp"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/pessoaicon2"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"/>
        <Button
            android:background="@drawable/stylebotao"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:textColor="#fff"
            />

        <Button
            android:id="@+id/btnCads"
            android:background="@drawable/stylebotao"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textColor="#fff"
            />

    </LinearLayout>
</LinearLayout>